3/28/12 intermediate progress on line model, graph model, graph view
3/27/12 split up controls for saving and erasing lines, since they are unlikely to be co-located
3/27/12 migrate PropertyCheckBoxWithIcon to phetcommon
3/27/12 add placeholders for icons in "Show" control panel
3/27/12 delete control for choosing from of slope-intercept equation, we're using only y=mx+b
3/27/12 add additional controls to "Show" control panel
3/27/12 change format of standard equations (y=+1x, y=-1x)
3/20/12 adjust Intro canvas layout, implement Reset All
3/20/12 placeholders for graph and equation, to get a feel for layout
3/20/12 control for showing standard lines
3/20/12 control for chosing form of slope-intercept equation
3/20/12 control for saving and erasing lines
3/20/12 English strings for Intro tab
3/20/12 add "Reset All" button to Intro canvas
3/20/12 create MVC structure for Intro and Game tabs
3/20/12 set up project skeleton in SVN